--- a/index.html
+++ b/index.html
@@ -453,9 +453,9 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#lessons">Lessons</a></li>
-                <li><a href="#blog">Blog</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#resources">Resources</a></li>
-                <li><a href="#contact" class="cta-nav">Contact</a></li>
+                <li><a href="contact.hmtl" class="cta-nav">Contact</a></li>
             </ul>
         </nav>
     </header>
