Fix spelling and enhance lesson format in index.html
Corrected spelling errors and improved formatting for lesson descriptions.

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 </div>
                 <div>
                     <div class="about-text">
-                        Music is a language, and like any language, it's not just what you say but how you say it that matters. My approach to guitar instruction emphasizes the development of musical phrasing and understanding "the whole picutre" - the subtle timing, dynamics, harmony and expression that distinguish mechanical playing from heartfelt communication.
+                        Music is a language and like any language, it's not just what you say but <i>how</i> you say it that matters. My approach to guitar instruction emphasizes the development of musical phrasing and understanding "the whole picture" - the subtle timing, dynamics, harmony and expression that distinguish mechanical playing from heartfelt communication.
                     </div>
                     <div class="about-text">
                         Whether you're beginning your musical journey or seeking to refine advanced techniques, we'll work together to develop your unique voice on the instrument while building a solid foundation of technical proficiency and musical understanding.
@@ -506,32 +506,38 @@
     </section>
 
     <section id="lessons" class="services fade-in">
-        <div class="container">
-            <h2>Lesson Formats</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <h3>Individual Instruction</h3>
-                    <p>Personalized one-on-one lessons tailored to your specific goals, skill level, and musical interests. Available both in-person and online.</p>
-                    <div class="service-details">
-                        60 minute sessions • Flexible scheduling • All levels welcome
-                    </div>
-                </div>
-                <div class="service-card">
-                    <h3>Technique Intensive</h3>
-                    <p>Focused sessions dedicated to specific technical challenges, from basic chord transitions to advanced fingerpicking patterns and complex lead techniques.</p>
-                    <div class="service-details">
-                        60-75 minute sessions • Problem-solving approach • Supplementary materials
-                    </div>
-                    <div class="service-card">
-                    <h3>Genre Deep Dive</h3>
-                    <p>Ever wanted to jump in to Jazz or drop some brutal Metalcore riffs? These sessions are designed to adapt your current skills to a new style. Technical drills, music theory, improvisation, songwriting excercises, complex lead techniques and and much more.</p>
-                    <div class="service-details">
-                        60-90 minute sessions • Supplementary materials
-                </div>
-                </div>
-            </div>
+  <div class="container">
+    <h2>Lesson Formats</h2>
+    <div class="services-grid">
+      <!-- Card 1 -->
+      <div class="service-card">
+        <h3>Individual Instruction</h3>
+        <p>Personalized one-on-one lessons tailored to your specific goals, skill level, and musical interests. Available both in-person and online.</p>
+        <div class="service-details">
+          60 minute sessions • Flexible scheduling • All levels welcome
         </div>
-    </section>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="service-card">
+        <h3>Technique Intensive</h3>
+        <p>Focused sessions dedicated to specific technical challenges, from basic chord transitions to advanced fingerpicking patterns and complex lead techniques.</p>
+        <div class="service-details">
+          60–75 minute sessions • Problem-solving approach • Supplementary materials
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="service-card">
+        <h3>Genre Deep Dive</h3>
+        <p>Ever wanted to jump into Jazz or drop some brutal Metalcore riffs? These sessions adapt your current skills to a new style: technical drills, music theory, improvisation, songwriting exercises, complex lead techniques, and more.</p>
+        <div class="service-details">
+          60–90 minute sessions • Supplementary materials
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <section class="testimonials fade-in">
         <div class="container">
